tests/typechecking/valid/simple_add_float.ml
let x= 3.2 in 3.2+.4.5