tests/typechecking/invalid/add_float_for_int.ml
let x = 8 let x+.8.6